--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "antd": "^2.12.7",
     "classnames": "^2.2.5",
     "firebase": "^4.1.3",
+    "google-map-react": "^0.24.0",
     "history": "^4.6.3",
     "immutable": "^3.8.1",
     "jquery": "^3.2.1",
@@ -38,6 +39,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-gif": "^0.1.0",
+    "react-google-maps": "^8.3.4",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
